[package]
name = "image_misc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25"
dotenv = "*"
anyhow = "1.0.75"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
reqwest = { version = "0.12.4", features = ["blocking"] }
imageproc = "0.25.0"
ab_glyph = "0.2.26"
itertools = "0.13.0"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "tokio-macros", "macros"] }
speedrun-api = "1.3.0"
regex = "1.10.5"
bytes = "1.6.0"
clap = { version = "4.5.9", features = ["derive"] }
